--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -3,3 +3,7 @@ $height: 900px;
 $main-color: #302E60;
 $roboto-regular: "Roboto";
 $roboto-medium: "Roboto" 500;
+:root {
+    --deltaW: 1;
+    --deltaH: 1;
+}
