--- a/static/index.css
+++ b/static/index.css
@@ -123,6 +123,12 @@ body {
   overflow-x: hidden;
 }
 
+.non-selectable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
 .auth.logo {
   width: 256px;
   height: 256px;
@@ -307,16 +313,17 @@ body {
   font-size: calc(11px * var(--deltaW));
   margin: calc(8px * var(--deltaH)) calc(59px * var(--deltaW)) 0 calc(64px * var(--deltaW));
 }
-.app.added-services {
-  width: calc(194px * var(--deltaW));
-  height: calc(72px * var(--deltaH));
-  margin: calc(32px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
+.app.added-services.text {
   color: #EBE0E1;
+  font-size: calc(16px * var(--deltaW));
+  width: calc(194px * var(--deltaW));
+  height: calc(24px * var(--deltaH));
+  margin: calc(32px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
 }
 .app.added-services.add-service-button {
   width: calc(32px * var(--deltaW));
   height: calc(32px * var(--deltaH));
-  margin: calc(16px * var(--deltaH)) 0 0 0;
+  margin: calc(16px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
   cursor: pointer;
 }
 .app.transfer-music {
@@ -441,7 +448,7 @@ body {
 }
 .app.chosen.count {
   font-size: calc(22px * var(--deltaW));
-  width: calc(127px * var(--deltaW));
+  width: calc(133px * var(--deltaW));
   height: calc(40px * var(--deltaH));
   margin: calc(112px * var(--deltaH)) calc(121px * var(--deltaW)) 0 0;
 }
@@ -454,7 +461,7 @@ body {
   font-size: calc(12px * var(--deltaW));
   width: calc(188px * var(--deltaW));
   height: calc(40px * var(--deltaH));
-  margin: calc(112px * var(--deltaH)) calc(90px * var(--deltaW)) 0 0;
+  margin: calc(112px * var(--deltaH)) calc(90px * var(--deltaW)) calc(16px * var(--deltaH)) 0;
   cursor: pointer;
 }
 .app.chosen.transfer {
@@ -493,6 +500,7 @@ body {
 .app.song.label {
   margin: 0;
   background: none;
+  align-items: flex-start;
   width: calc(168px * var(--deltaW));
 }
 .app.song.service {
@@ -547,6 +555,7 @@ body {
 }
 .app.song.top-part.label {
   width: calc(168px * var(--deltaW));
+  align-items: center;
   margin: 0;
 }
 .app.song.top-part.service {
@@ -556,20 +565,89 @@ body {
 }
 .app.song.top-part.option1 {
   align-items: center;
-  width: 100px;
+  width: calc(100px * var(--deltaW));
   margin: 0 calc(45px * var(--deltaW)) 0 0;
 }
 .app.song.top-part.option2 {
-  width: 100px;
+  width: calc(100px * var(--deltaW));
   margin: 0 calc(61px * var(--deltaW)) 0 0;
 }
 .app.song.top-part.change {
-  width: 24px;
+  width: calc(24px * var(--deltaW));
   margin: 0 calc(131px * var(--deltaW)) 0 0;
 }
 .app.song.top-part.delete {
-  width: calc(24px * var(--deltaW));
+  width: calc(56px * var(--deltaW));
   margin: 0;
+}
+.app.popup {
+  width: 100%;
+  min-height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.app.popup-container {
+  border-radius: 16px;
+  width: calc(552px * var(--deltaW));
+  height: calc(320px * var(--deltaH));
+  background-color: #494781;
+  display: inline-block;
+}
+.app.popup-container.goback-btn {
+  display: block;
+  margin: calc(14px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
+  cursor: pointer;
+  width: calc(24px * var(--deltaW));
+  height: calc(24px * var(--deltaH));
+  background: none;
+  float: left;
+}
+.app.popup-container.popup-label {
+  display: inline-block;
+  margin: 0;
+  width: calc(475px * var(--deltaW));
+  height: calc(24x * var(--deltaH));
+  font-size: calc(16px * var(--deltaW));
+  background: none;
+  color: #EBE0E1;
+}
+.app.popup-container.popup-label.main {
+  float: left;
+  margin: calc(18px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
+}
+.app.popup-container.popup-label.service-pick {
+  margin: calc(48px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
+  float: left;
+}
+.app.popup-container.popup-service-container {
+  background-color: none;
+  width: calc(486px * var(--deltaW));
+  height: calc(172px * var(--deltaH));
+  margin: calc(16px * var(--deltaH)) 0 0 calc(56px * var(--deltaW));
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-color: #9A86C3;
+  scrollbar-width: 6px;
+}
+.app.popup-container.popup-service-container.service {
+  cursor: pointer;
+  margin: 0 calc(16px * var(--deltaH)) calc(16px * var(--deltaW)) 0;
+  width: calc(96px * var(--deltaW));
+  height: calc(96px * var(--deltaH));
+}
+.app.popup-container.popup-service-container::-webkit-scrollbar {
+  width: 6px;
+}
+.app.popup-container.popup-service-container::-webkit-scrollbar-thumb {
+  width: 6px;
+  border-radius: 99px;
+  background-color: #9A86C3;
 }
 
 /*# sourceMappingURL=index.css.map */
