--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -101,14 +101,17 @@
         }
     }
     &.added-services {
-        width: calc(194px*var(--deltaW));
-        height: calc(72px*var(--deltaH));
-        margin: calc(32px*var(--deltaH)) 0 0 calc(16px*var(--deltaW));
-        color: #EBE0E1;
+        &.text {
+            color: #EBE0E1;
+            font-size: calc(16px*var(--deltaW));
+            width: calc(194px*var(--deltaW));
+            height: calc(24px*var(--deltaH));
+            margin: calc(32px*var(--deltaH)) 0 0 calc(16px*var(--deltaW));
+        }
         &.add-service-button {
             width: calc(32px*var(--deltaW));
             height: calc(32px*var(--deltaH));
-            margin: calc(16px*var(--deltaH)) 0 0 0;
+            margin: calc(16px*var(--deltaH)) 0 0 calc(16px*var(--deltaW));
             cursor: pointer;
         }
     }
@@ -233,7 +236,7 @@
         }
         &.count {
             font-size: calc(22px*var(--deltaW));
-            width: calc(127px*var(--deltaW));
+            width: calc(133px*var(--deltaW));
             height: calc(40px*var(--deltaH));
             margin: calc(112px*var(--deltaH)) calc(121px*var(--deltaW)) 0 0;
         }
@@ -246,7 +249,7 @@
             font-size: calc(12px*var(--deltaW));
             width: calc(188px*var(--deltaW));
             height: calc(40px*var(--deltaH));
-            margin: calc(112px*var(--deltaH)) calc(90px*var(--deltaW)) 0 0;
+            margin: calc(112px*var(--deltaH)) calc(90px*var(--deltaW)) calc(16px*var(--deltaH)) 0;
             cursor: pointer;
         }
         &.transfer {
@@ -285,6 +288,7 @@
         &.label {
             margin: 0;
             background: none;
+            align-items: flex-start;
             width: calc(168px*var(--deltaW));
         }
         &.service {
@@ -339,6 +343,7 @@
         }
         &.label {
             width: calc(168px*var(--deltaW));
+            align-items: center;
             margin: 0;
         }
         &.service {
@@ -348,20 +353,89 @@
         }
         &.option1 {
             align-items: center;
-            width: 100px;
+            width: calc(100px*var(--deltaW));
             margin: 0 calc(45px*var(--deltaW)) 0 0;
         }
         &.option2 {
-            width: 100px;
+            width: calc(100px*var(--deltaW));
             margin: 0 calc(61px*var(--deltaW)) 0 0;
         }
         &.change {
-            width: 24px;
+            width: calc(24px*var(--deltaW));
             margin: 0 calc(131px*var(--deltaW)) 0 0;
         }
         &.delete {
-            width: calc(24px*var(--deltaW));
+            width: calc(56px*var(--deltaW));
             margin: 0;
+        }
+    }
+    &.popup {
+        width: 100%;
+        min-height: 100%;
+        background-color: rgba(0, 0, 0, 0.25);
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        justify-content: center;
+        align-items: center;
+    }
+    &.popup-container {
+        border-radius: 16px;
+        width: calc(552px*var(--deltaW));
+        height: calc(320px*var(--deltaH));
+        background-color: #494781;
+        display: inline-block;
+        &.goback-btn {
+            display: block;
+            margin: calc(14px*var(--deltaH)) 0 0 calc(16px*var(--deltaW));
+            cursor: pointer;
+            width: calc(24px*var(--deltaW));
+            height: calc(24px*var(--deltaH));
+            background: none;
+            float: left;
+        }
+        &.popup-label {
+            display: inline-block;
+            margin: 0;
+            width: calc(475px*var(--deltaW));
+            height: calc(24x*var(--deltaH));
+            font-size: calc(16px*var(--deltaW));
+            background: none;
+            color: #EBE0E1;
+            &.main {
+                float: left;
+                margin: calc(18px*var(--deltaH)) 0 0 calc(16px*var(--deltaW));
+            }
+            &.service-pick {
+                margin: calc(48px*var(--deltaH)) 0 0 calc(16px*var(--deltaW));
+                float: left;
+            }
+        }
+        &.popup-service-container {
+            background-color: none;
+            width: calc(486px*var(--deltaW));
+            height: calc(172px*var(--deltaH));
+            margin: calc(16px*var(--deltaH)) 0 0 calc(56px*var(--deltaW));
+            overflow-y: scroll;
+            overflow-x: hidden;
+            scrollbar-color: #9A86C3;
+            scrollbar-width: 6px;
+            &.service {
+                cursor: pointer;
+                margin: 0 calc(16px*var(--deltaH)) calc(16px*var(--deltaW)) 0;
+                width: calc(96px*var(--deltaW));
+                height: calc(96px*var(--deltaH));
+            }
+        }
+        &.popup-service-container::-webkit-scrollbar {
+            width: 6px;
+        }
+        &.popup-service-container::-webkit-scrollbar-thumb {
+            width: 6px;
+            border-radius: 99px;
+            background-color: #9A86C3;
         }
     }
 }
