--- a/static/index.css
+++ b/static/index.css
@@ -321,9 +321,36 @@ body {
   margin: calc(32px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
 }
 .app.added-services.add-service-button {
+  display: inline-block;
   width: calc(32px * var(--deltaW));
   height: calc(32px * var(--deltaH));
   margin: calc(16px * var(--deltaH)) 0 0 calc(16px * var(--deltaW));
+  cursor: pointer;
+}
+.app.added-services.left-arrow-btn {
+  display: inline-block;
+  margin: 0 calc(2px * var(--deltaW)) calc(4px * var(--deltaH)) calc(4px * var(--deltaW));
+  width: calc(24px * var(--deltaW));
+  height: calc(24px * var(--deltaH));
+  cursor: pointer;
+}
+.app.added-services.service-container {
+  display: inline-block;
+  width: calc(128px * var(--deltaW));
+  height: calc(32px * var(--deltaH));
+  overflow: hidden;
+}
+.app.added-services.service-container.service {
+  width: calc(32px * var(--deltaW));
+  height: calc(32px * var(--deltaH));
+  margin: 0 calc(8px * var(--deltaW)) 0 0;
+}
+.app.added-services.service-container.service.not-connected {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  filter: grayscale(100%);
   cursor: pointer;
 }
 .app.transfer-music {
@@ -430,7 +457,6 @@ body {
   overflow-y: hidden;
   width: calc(1050px * var(--deltaW));
   height: calc(900px * var(--deltaH));
-  background: url(/static/images/big-blurried-spotifer-logo.svg) repeat center;
 }
 .app.chosen {
   width: calc(200px * var(--deltaW));
@@ -500,6 +526,7 @@ body {
 .app.song.label {
   margin: 0;
   background: none;
+  border-radius: 0;
   align-items: flex-start;
   width: calc(168px * var(--deltaW));
 }
