--- a/templates/app.html
+++ b/templates/app.html
@@ -41,7 +41,7 @@
                 <img src="/static/images/deezer-logo.svg" onclick="window.location.href = '/add_deezer'" class="app added-services service-container service not-connected deezer">
             </div>
         </div>
-        <div class="app transfer-music non-selectable">
+        <div class="app transfer-music non-selectable" onclick="showTransferPopUp()">
             {{ _('Перенести музыку') }}
         </div>
         <div class="app menu-options">
