--- a/templates/app.html
+++ b/templates/app.html
@@ -35,7 +35,7 @@
             <img src="/static/images/add-service.svg" class="app added-services add-service-button">
             <img src="/static/images/left-arrow.svg" class="app added-services left-arrow-btn" onclick="next()">
             <div class="app added-services service-container non-selectable">
-                <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = '/add_spotify'" class="app added-services service-container service not-connected spotify">
+                <img src="/static/images/spotify-logo1.svg" onclick="window.location.href = 'https://accounts.spotify.com/authorize?client_id=b1fa88d88e3042d8b40e21af7e55a0ba&response_type=code&redirect_uri=http%3A%2F%2F127.0.0.1%3A5000%2Fauth_spotify&scope=playlist-modify-private+playlist-modify-public+ugc-image-upload+user-library-read+user-library-modify+user-follow-modify+user-follow-read+playlist-read-private+user-top-read+user-read-email&show_dialog=True'" class="app added-services service-container service not-connected spotify">
                 <img src="/static/images/yandex-logo.svg" onclick="window.location.href = '/add_yandex'" class="app added-services service-container service not-connected yandex">
                 <img src="/static/images/vk-logo1.svg" onclick="window.location.href = '/add_vk'" class="app added-services service-container service not-connected vk">
                 <img src="/static/images/deezer-logo.svg" onclick="window.location.href = '/add_deezer'" class="app added-services service-container service not-connected deezer">
